[package]
name = "vta-mobile-core"
version = "0.6.12"
description = "UniFFI engine for the VTA mobile agent (Android/iOS): DIDComm, Trust Tasks, AAL step-up."
edition.workspace = true
# Not a crates.io library — the published artifacts are the Android AAR
# (org.openvtc.vta:mobile-core-android) and the VtaMobileCore.xcframework,
# produced by the dedicated mobile-artifacts CI job, not `cargo publish`.
publish = false
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# Underscore form is the FFI library name (libvta_mobile_core.{so,dylib,a}).
name = "vta_mobile_core"
# cdylib → Android .so + the library uniffi-bindgen introspects;
# staticlib → iOS xcframework; lib → in-crate tests and host builds.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# `cli` provides `uniffi::uniffi_bindgen_main`; `tokio` lets us export async
# functions (`#[uniffi::export(async_runtime = "tokio")]`).
uniffi = { workspace = true, features = ["cli", "tokio"] }
thiserror = { workspace = true }
base64 = { workspace = true }
# `Serialize` bound for the generic proof/serialize helpers; payload types come
# from trust-tasks-rs (which derives serde) — we only need the trait in scope.
serde = { workspace = true }
serde_json = { workspace = true }
# Generated Trust Task payload types (incl. the step-up `Evidence` union and
# `acceptableEvidence`, available from 0.1.3).
trust-tasks-rs = { workspace = true }
# Parsing the caller-supplied `issuedAt` (RFC 3339) into the DateTime<Utc> the
# TrustTask envelope carries.
chrono = { workspace = true }
# Data Integrity proof construction for the DID-signed step-up gate.
# `prepare_sign_input` does the eddsa-jcs-2022 canonicalization/hashing; the
# native Signer signs the result (key never enters Rust); we assemble the proof.
affinidi-data-integrity = { workspace = true }
# Multibase (base58btc) encoding of the signature into `proofValue`.
multibase = { workspace = true }
# ed25519→x25519 key-agreement derivation + did:key encoding for the DIDComm
# holder identity (the X25519 key matches the holder did:key's keyAgreement, so
# a sender resolving the did:key can authcrypt to it). Tested TDK conversions —
# we compose, never hand-roll. See workspace CLAUDE.md "Default to DIDs".
affinidi-crypto = { workspace = true }
# Async runtime for the FFI async exports + a process-wide resolver cell.
tokio = { workspace = true }
# Opt-in log subscriber for `init_logging` — pipes the engine's + the affinidi
# stack's `tracing` output to stderr (the Xcode console on iOS / logcat-adjacent
# on Android) so on-device network/DIDComm failures are diagnosable.
tracing-subscriber = { workspace = true }
# DID resolution. Default config is local (did:key / did:peer resolve offline);
# networked methods (did:web / did:webvh) need network-mode config — later.
affinidi-did-resolver-cache-sdk = { workspace = true }
# DIDComm v2 authcrypt/anoncrypt pack + unpack. Pinned to vta-sdk's version.
affinidi-messaging-didcomm = "0.15"
# Mediator-connected DIDComm session (ATM): the `MediatorSession` FFI wraps
# `vta-sdk::DIDCommSession` (connect + receive_next) so the mobile approver can
# pull VTA-pushed step-up approve-requests off the mediator — reusing the SDK
# the VTA uses rather than reimplementing the affinidi mediator protocol.
vta-sdk = { path = "../vta-sdk", version = "0.19", features = ["session"] }
# iOS has no native trust store that `rustls-native-certs` can read, so the
# mediator WebSocket (tokio-tungstenite, via affinidi-messaging-sdk) fails with
# "no native root CA certificates found". Declaring tokio-tungstenite here with
# `rustls-tls-webpki-roots` turns that feature on graph-wide (features are
# additive): tokio-tungstenite then treats empty native certs as non-fatal and
# adds the bundled Mozilla webpki roots — so `wss://` works on iOS. We don't use
# the crate directly (`use tokio_tungstenite as _` in lib.rs); it's a feature
# enabler matched to the version affinidi-messaging-sdk already pulls.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
# Test-only Ed25519 signing for the did-signed verify round-trip (stands in for
# the native enclave Signer).
ed25519-dalek = { workspace = true }

[[bin]]
# `cargo run -p vta-mobile-core --bin uniffi-bindgen -- generate ...`
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[lints]
workspace = true
