[package]
name = "vta-sdk"
description = "SDK for Verifiable Trust Agents operating in Verifiable Trust Communities"
readme = "README.md"
version = "0.6.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
didcomm = ["dep:affinidi-tdk", "dep:affinidi-did-resolver-cache-sdk", "dep:tracing", "dep:uuid", "dep:tokio"]
client = [
  "dep:reqwest",
  "dep:tracing",
  "dep:uuid",
  "dep:affinidi-tdk",
  "dep:tokio",
  "dep:ed25519-dalek",
  "dep:x25519-dalek",
  "dep:curve25519-dalek",
  "dep:aes-gcm",
  "dep:aes",
  "dep:sha2",
]
session = [
  "client",
  "didcomm",
  "dep:affinidi-did-resolver-cache-sdk",
  "dep:tokio",
  # Rotation of a temp-provisioned did:key on first successful auth needs
  # a CSPRNG seed for the replacement Ed25519 key.
  "dep:getrandom",
]
integration = ["client", "session"]
# OS keyring backend for session storage. Pulls in `keyring-core` plus
# the per-target platform store. Each binary that enables this feature
# must call `vta_sdk::keyring_init::install_default_store()` once at startup
# before any `Entry::new` call.
keyring = [
  "dep:keyring-core",
  "dep:apple-native-keyring-store",
  "dep:windows-native-keyring-store",
  "dep:dbus-secret-service-keyring-store",
]
config-session = []
azure-secrets = [
  "dep:azure_security_keyvault_secrets",
  "dep:azure_identity",
  "dep:tokio",
]
sealed-transfer = [
  "dep:hpke",
  "dep:ciborium",
  "dep:getrandom",
  "dep:sha2",
  "dep:x25519-dalek",
  "dep:ed25519-dalek",
  "dep:zeroize",
  # did:key + ed25519↔x25519 conversion helpers. `affinidi-crypto::did_key`
  # gives us raw-bytes entry points (vs. the multikey-string shape in
  # `affinidi-crypto::ed25519`) that fit the HPKE key shapes directly.
  "dep:affinidi-crypto",
]
# Provision-integration: VP-framed bootstrap requests + VC-issued admin
# authorization + TemplateBootstrap payload. Pulls in `sealed-transfer` so
# everything the flow needs (HPKE, did:key helpers, ed25519↔x25519) is
# available to a single feature.
provision-integration = [
  "sealed-transfer",
  "dep:affinidi-vc",
  "dep:affinidi-data-integrity",
  "dep:affinidi-secrets-resolver",
  "dep:uuid",
  "dep:tokio",
]
# Full AWS Nitro attestation verification (COSE_Sign1 + certificate chain
# against the AWS Nitro root). Consumers of sealed-bootstrap Mode B enable
# this to validate the `Attested` producer assertion end-to-end.
attest-verify = [
  "sealed-transfer",
  "dep:nitro_attest",
  "dep:time",
  "dep:affinidi-crypto",
  "dep:sha2",
]
# Integration-side provisioning workflow: the orchestration layer above
# `provision-integration` that drives setup-key minting, transport selection,
# connection testing, and sealed-bundle opening. Used by setup tools that
# onboard an integration (mediator, webvh, future apps) against a running
# VTA. TUI-agnostic — emits events on a consumer-owned channel.
provision-client = [
  "provision-integration",
  "session",
  "dep:tracing",
]
# Expose in-memory test fixtures for downstream integration tests.
# Currently gates: `SessionBackend` mocks (always); `provision_client::test_helpers`
# (when `provision-client` is also on). Additive, zero-cost when off.
test-support = ["session"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
multibase = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
affinidi-tdk = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
affinidi-did-resolver-cache-sdk = { workspace = true, optional = true }
keyring-core = { workspace = true, optional = true }
azure_security_keyvault_secrets = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }
curve25519-dalek = { version = "4", optional = true }
aes-gcm = { workspace = true, optional = true }
aes = { version = "0.9", optional = true }
sha2 = { workspace = true, optional = true }
hpke = { version = "0.13", optional = true }
affinidi-crypto = { workspace = true, optional = true }
affinidi-vc = { workspace = true, optional = true }
affinidi-data-integrity = { workspace = true, optional = true }
affinidi-secrets-resolver = { workspace = true, optional = true }
ciborium = { version = "0.2", optional = true }
# Used only by sealed-transfer to feed an OS-backed CSPRNG into hpke's
# rand_core 0.9 trait surface (rand 0.10 + rand_core 0.10 are incompatible).
getrandom = { version = "0.4", optional = true }
nitro_attest = { version = "0.2", optional = true }
time = { version = "0.3", optional = true, features = ["macros"] }
# Scrub secret byte buffers on drop (sealed-transfer, key derivation).
zeroize = { version = "1", optional = true }

# Per-target platform credential stores for keyring-core. Only one is
# active per build; the install helper picks the matching one via cfg.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { workspace = true, optional = true }

[[example]]
name = "sealed_transfer_round_trip"
required-features = ["sealed-transfer"]

[[example]]
name = "bootstrap_request"
required-features = ["sealed-transfer", "provision-integration"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
wiremock = "0.6"
# Examples need direct access to crypto primitives the SDK normally
# encapsulates — pulled into dev-deps only so the published artifact
# stays slim.
ed25519-dalek = { workspace = true }
affinidi-crypto = { workspace = true }
getrandom = "0.4"
base64 = { workspace = true }

[lints]
workspace = true
