[package]
name = "vta-sdk"
description = "SDK for Verifiable Trust Agents operating in Verifiable Trust Communities"
readme = "README.md"
version = "0.13.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
didcomm = ["dep:affinidi-tdk", "dep:affinidi-did-resolver-cache-sdk", "dep:tracing", "dep:uuid", "dep:tokio"]
client = [
  "dep:reqwest",
  "dep:tracing",
  "dep:uuid",
  "dep:affinidi-tdk",
  "dep:affinidi-messaging-didcomm",
  # didcomm 0.15 moved `PublicKeyAgreement` out of
  # `affinidi_messaging_didcomm::crypto` into `affinidi_crypto::jose`.
  # `didcomm_light::pack_anoncrypt` (gated on `client`) names that type,
  # so `client` must pull `affinidi-crypto` in its own right.
  "dep:affinidi-crypto",
  "dep:didwebvh-rs",
  "dep:tokio",
  "dep:ed25519-dalek",
  "dep:curve25519-dalek",
  "dep:sha2",
]
session = [
  "client",
  "didcomm",
  "dep:affinidi-did-resolver-cache-sdk",
  "dep:tokio",
  # Rotation of a temp-provisioned did:key on first successful auth needs
  # a CSPRNG seed for the replacement Ed25519 key.
  "dep:getrandom",
]
integration = ["client", "session"]
# OS keyring backend for session storage. Pulls in `keyring-core` plus
# the per-target platform store. Each binary that enables this feature
# must call `vta_sdk::keyring_init::install_default_store()` once at startup
# before any `Entry::new` call.
keyring = [
  "dep:keyring-core",
  "dep:apple-native-keyring-store",
  "dep:windows-native-keyring-store",
  "dep:dbus-secret-service-keyring-store",
]
config-session = []
azure-secrets = [
  "dep:azure_security_keyvault_secrets",
  "dep:azure_identity",
  "dep:tokio",
]
sealed-transfer = [
  "dep:hpke",
  "dep:ciborium",
  "dep:getrandom",
  "dep:sha2",
  "dep:x25519-dalek",
  "dep:ed25519-dalek",
  "dep:zeroize",
  # did:key + ed25519↔x25519 conversion helpers. `affinidi-crypto::did_key`
  # gives us raw-bytes entry points (vs. the multikey-string shape in
  # `affinidi-crypto::ed25519`) that fit the HPKE key shapes directly.
  "dep:affinidi-crypto",
]
# Provision-integration: VP-framed bootstrap requests + VC-issued admin
# authorization + TemplateBootstrap payload. Pulls in `sealed-transfer` so
# everything the flow needs (HPKE, did:key helpers, ed25519↔x25519) is
# available to a single feature.
provision-integration = [
  "sealed-transfer",
  "dep:affinidi-vc",
  "dep:affinidi-data-integrity",
  "dep:affinidi-secrets-resolver",
  "dep:uuid",
  "dep:tokio",
]
# Full AWS Nitro attestation verification (COSE_Sign1 + certificate chain
# against the AWS Nitro root). Consumers of sealed-bootstrap Mode B enable
# this to validate the `Attested` producer assertion end-to-end.
attest-verify = [
  "sealed-transfer",
  "dep:nitro_attest",
  "dep:time",
  "dep:affinidi-crypto",
  "dep:sha2",
]
# Integration-side provisioning workflow: the orchestration layer above
# `provision-integration` that drives setup-key minting, transport selection,
# connection testing, and sealed-bundle opening. Used by setup tools that
# onboard an integration (mediator, webvh, future apps) against a running
# VTA. TUI-agnostic — emits events on a consumer-owned channel.
provision-client = [
  "provision-integration",
  "session",
  "dep:tracing",
  "dep:trust-tasks-rs",
]
# DCQL credential selection + holder-bound OID4VP `vp_token` assembly
# (`vp` module). `select_credentials` wraps the always-compiled
# `affinidi-openid4vp` DCQL matcher; `build_vp_token` signs each presentation
# with the holder's `eddsa-jcs-2022` Data-Integrity key, so it pulls the DI
# suite + the `Secret` signing type. The natural client-side counterpart to the
# `join-requests` / `credential-exchange` protocol types.
vp = ["dep:affinidi-data-integrity", "dep:affinidi-secrets-resolver"]
# Expose in-memory test fixtures for downstream integration tests.
# Currently gates: `SessionBackend` mocks (always); `provision_client::test_helpers`
# (when `provision-client` is also on). Additive, zero-cost when off.
test-support = ["session"]
# Structure-aware fuzzing support: derives `arbitrary::Arbitrary` on the
# sealed-transfer wire structs (`SealedBundle`, `ArmoredChunk`, the producer
# assertion family) so a libFuzzer harness can generate well-typed bundles
# directly instead of mutating armor-decode output. Off by default and
# zero-cost when off — only a downstream `fuzz/` workspace turns it on.
arbitrary = ["dep:arbitrary", "sealed-transfer"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# OID4VP (+ DCQL) and OID4VCI — the body formats wrapped by the
# `protocols::credential_exchange` Trust Task family (Phase 3, always compiled).
affinidi-openid4vp = { workspace = true }
affinidi-openid4vci = { workspace = true }
base64 = { workspace = true }
multibase = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
affinidi-tdk = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
affinidi-did-resolver-cache-sdk = { workspace = true, optional = true }
keyring-core = { workspace = true, optional = true }
azure_security_keyvault_secrets = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
# Used by `sealed-transfer` (HPKE keypair handling) only — the
# client/didcomm-light path now goes through `affinidi-messaging-didcomm`'s
# `PublicKeyAgreement` and doesn't take this dependency directly.
x25519-dalek = { workspace = true, optional = true }
curve25519-dalek = { version = "4", optional = true }
sha2 = { workspace = true, optional = true }
# Used by `client` (didcomm_light::pack_anoncrypt) to produce JWEs the
# workspace's pinned DIDComm decrypt path will accept (ECDH-ES+A256KW +
# A256CBC-HS512). Same pinned version as `vta-service`.
affinidi-messaging-didcomm = { version = "0.15", optional = true }
# Used by `client` (didcomm_light::resolve_vta_keyagreement) to resolve
# `did:webvh:` VTAs without pulling in the heavyweight TDK runtime. Same
# workspace-pinned version as `vta-service`.
didwebvh-rs = { workspace = true, optional = true }
hpke = { version = "0.13", optional = true }
affinidi-crypto = { workspace = true, optional = true }
affinidi-vc = { workspace = true, optional = true }
affinidi-data-integrity = { workspace = true, optional = true }
affinidi-secrets-resolver = { workspace = true, optional = true }
# Trust Task document/proof types for the DI-signed REST auth path
# (`provision_client::auth_rest`). Optional + gated on `provision-client` so the
# published artifact stays slim for non-provisioning consumers; also present as
# a dev-dependency for the always-on conformance tests below.
trust-tasks-rs = { workspace = true, optional = true }
ciborium = { version = "0.2", optional = true }
# Used only by sealed-transfer to feed an OS-backed CSPRNG into hpke's
# rand_core 0.9 trait surface (rand 0.10 + rand_core 0.10 are incompatible).
getrandom = { version = "0.4", optional = true }
nitro_attest = { version = "0.2", optional = true }
time = { version = "0.3", optional = true, features = ["macros"] }
# Scrub secret byte buffers on drop (sealed-transfer, key derivation).
zeroize = { version = "1", optional = true }
# Structure-aware fuzzing: `#[derive(Arbitrary)]` on the sealed-transfer wire
# structs. Optional + gated on the `arbitrary` feature so the published
# artifact stays slim for non-fuzzing consumers.
arbitrary = { version = "1", optional = true, features = ["derive"] }

# Per-target platform credential stores for keyring-core. Only one is
# active per build; the install helper picks the matching one via cfg.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { workspace = true, optional = true }

[[example]]
name = "sealed_transfer_round_trip"
required-features = ["sealed-transfer"]

[[example]]
name = "bootstrap_request"
required-features = ["sealed-transfer", "provision-integration"]

[[example]]
name = "gen_fuzz_seeds"
required-features = ["sealed-transfer", "provision-integration"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
wiremock = "0.6"
# Framework type-uri parser — used only by the trust-task URI
# registry test (`every_uri_parses_as_framework_type_uri`) to pin
# framework canonical-form conformance. Dev-only so the published
# artifact stays slim.
trust-tasks-rs = { workspace = true }
# Examples need direct access to crypto primitives the SDK normally
# encapsulates — pulled into dev-deps only so the published artifact
# stays slim.
ed25519-dalek = { workspace = true }
affinidi-crypto = { workspace = true }
getrandom = "0.4"
base64 = { workspace = true }
# Credential-format smoke test (tests/sd_jwt_vc_smoke.rs): exercises the
# adopted TDK SD-JWT-VC issue/verify path end-to-end as part of wiring the
# credential crates into the workspace (vti-credential-architecture §0.2).
# Dev-only — the published SDK does not depend on these yet.
affinidi-sd-jwt-vc = { workspace = true }
affinidi-sd-jwt = { workspace = true }
# The remaining adopted credential crates. Referenced from
# tests/cred_formats_build.rs purely so `cargo test -p vta-sdk` compiles and
# link-checks them as part of §0.2 ("the new deps build cleanly"), including
# the BBS+ Data Integrity cryptosuite behind the `bbs-2023` feature. Functional
# BBS / OID4VP-DCQL integration is later-phase work.
affinidi-bbs = { workspace = true }
affinidi-data-integrity = { workspace = true, features = ["bbs-2023"] }

[lints]
workspace = true
